@@ -26,6 +26,8 @@ Version 0.7
 
 - Changed behavior of `in` Operator for tokens. 
 
+- Added mimetypes for all lexers
+
 - Fixed tickets: #167, #178, #179, #180, #185.
 
 
